<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.udacity.android.maaz.project0.MainActivity"
    tools:showIn="@layout/activity_main">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/title"
        android:id="@+id/titleTextView"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textSize="25sp" />

    <Button
        style="@style/GenericButton"
        android:text="@string/spotify"
        android:id="@+id/spotifyButton"
        android:layout_marginTop="45dp"
        android:layout_below="@+id/titleTextView" />

    <Button
        style="@style/GenericButton"
        android:text="@string/scores"
        android:id="@+id/scoresButton"
        android:layout_below="@+id/spotifyButton" />

    <Button
        style="@style/GenericButton"
        android:text="@string/library"
        android:id="@+id/libraryButton"
        android:layout_below="@+id/scoresButton" />

    <Button
        style="@style/GenericButton"
        android:text="@string/bigger"
        android:id="@+id/biggerButton"
        android:layout_below="@+id/libraryButton" />

    <Button
        style="@style/GenericButton"
        android:text="@string/xyz"
        android:id="@+id/xyzButton"
        android:layout_below="@+id/biggerButton" />

    <Button
        style="@style/GenericButton"
        android:text="@string/capstone"
        android:id="@+id/capstoneButton"
        android:layout_below="@+id/xyzButton"
        android:background="@color/colorCapstone" />

    </RelativeLayout>

</ScrollView>
